# db8

backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  chat.py  concurrency.py  config.py  document_loader.py  main.py  vector_store.py
frontend/: .gitignore  next-env.d.ts  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx
frontend/lib/: api.ts
scripts/: start_backend.sh  start_frontend.sh
